improved readability for index and fixed section titles

--- a/src/styles/blocks/about.scss
+++ b/src/styles/blocks/about.scss
@@ -22,7 +22,6 @@
   &__title {
     @include section-title;
     margin-bottom: 32px;
-    text-align: left;
 
     @include onLarge {
       margin-bottom: 144px;
