--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -94,7 +94,6 @@
 
   &__title {
     @include section-title;
-    text-align: left;
     margin-bottom: 40px;
 
     &--br {
