--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -11,9 +11,7 @@
   &__body {
     background-color: $lightBlue;
 
-    &--with-menu {
-      overflow: hidden;
-    }
+    
   }
 
   &__bakery {
