--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -45,7 +45,6 @@
   line-height: 85%;
   letter-spacing: -0.05em;
   text-transform: uppercase;
-  text-align: center;
 
   @include onMedium {
     font-size: 56px;
